# apter

./: .gitignore  LICENSE.txt  README.rst  TODO.txt  pyproject.toml  release_new_version.py  setup.cfg  setup.py
apter/: __init__.py  apter.py
confit/: __init__.py  confit.py
src/apter/: apter.py
test/: test_apter.py  test_confit.py
tests/: test_apter.py
