[metadata]
name = apter
version = 0.10-dev
author = U. Melendez
author_email = apterpy@bfjournal.com
description = A sweet project configuration package
long_description = file: README.rst
long_description_content_type = text/markdown
url = https://github.com/ulygit/apter
project_urls =
    Bug Tracker = https://github.com/ulygit/apter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    parse >= "1.19.0"
    PyYaml >= "5.4.1"

[options.packages.find]
where = src

[aliases]
test=pytest
